--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,6 +8,7 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include molflowlinux_sub/Source_files_linux/subdir.mk
 -include molflowlinux_sub/Header/TruncatedGaussian/subdir.mk
 -include molflowlinux_sub/subdir.mk
 -include subdir.mk
