--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,8 +8,10 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include molflowlinux_sub/Source_files_shared_sources/subdir.mk
 -include molflowlinux_sub/Source_files_linux/subdir.mk
 -include molflowlinux_sub/Header/TruncatedGaussian/subdir.mk
+-include molflowlinux_sub/Header/GLApp/subdir.mk
 -include molflowlinux_sub/subdir.mk
 -include subdir.mk
 -include objects.mk
