M3: Update the functions 'UpdateHits' and 'UpdateMCHits'; replacing Dataport by Databuffer

--- a/.cproject
+++ b/.cproject
@@ -68,7 +68,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="molflowlinux_sub/GLApp/MathTools.cpp|molflowlinux_sub/Source_files_molflow|molflowlinux_sub/Header/GLApp/MathTools.cpp|molflowlinux_sub/10.0.17134.0|molflowlinux_sub/Source_files_molflow/SimulationAC.cpp|molflowlinux_project/Header|molflowlinux_project/PugiXML|molflowlinux_project/Source_Files_Linux|molflowlinux_project/Some_Win_Source_Files" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+						<entry excluding="molflowlinux_sub/Source_files_molflow/Simulation.cpp|molflowlinux_sub/Source_files_molflow/molflowSub.cpp|molflowlinux_sub/GLApp/MathTools.cpp|molflowlinux_sub/Header/GLApp/MathTools.cpp|molflowlinux_sub/10.0.17134.0|molflowlinux_sub/Source_files_molflow/SimulationAC.cpp|molflowlinux_project/Header|molflowlinux_project/PugiXML|molflowlinux_project/Source_Files_Linux|molflowlinux_project/Some_Win_Source_Files" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -116,7 +116,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="molflowlinux_sub/GLApp/MathTools.cpp|molflowlinux_sub/Source_files_molflow|molflowlinux_sub/Header/GLApp/MathTools.cpp|molflowlinux_sub/10.0.17134.0|molflowlinux_sub/Source_files_molflow/SimulationAC.cpp|molflowlinux_project/Header|molflowlinux_project/PugiXML|molflowlinux_project/Source_Files_Linux|molflowlinux_project/Some_Win_Source_Files" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="molflowlinux_sub/Source_files_molflow/Simulation.cpp|molflowlinux_sub/Source_files_molflow/molflowSub.cpp|molflowlinux_sub/GLApp/MathTools.cpp|molflowlinux_sub/Header/GLApp/MathTools.cpp|molflowlinux_sub/10.0.17134.0|molflowlinux_sub/Source_files_molflow/SimulationAC.cpp|molflowlinux_project/Header|molflowlinux_project/PugiXML|molflowlinux_project/Source_Files_Linux|molflowlinux_project/Some_Win_Source_Files" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
