change of .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-molflowlinux_sub/10.0.17134.0
-molflowlinux_project
-Debug
-.settings
+molflowlinux_sub/10.0.17134.0/
+molflowlinux_project/
+Debug/
+.settings/
