--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,6 +8,8 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include molflowlinux_sub/boost/spirit/home/support/char_encoding/unicode/subdir.mk
+-include molflowlinux_sub/boost/asio/impl/subdir.mk
 -include molflowlinux_sub/TruncatedGaussian/subdir.mk
 -include molflowlinux_sub/Source_files_shared_sources/subdir.mk
 -include molflowlinux_sub/Source_files_molflow/subdir.mk
