change of .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 Debug/
 results/
 ContaminationFlow_doc/main.log
+ContaminationFlow_doc/main.aux
+ContaminationFlow_doc/main.out
+ContaminationFlow_doc/main.run.xml
+ContaminationFlow_doc/main.toc
+ContaminationFlow_doc/settings.log
+ContaminationFlow_doc/main-blx.bib
