changed includes of (renamed) header files

--- a/.gitignore
+++ b/.gitignore
@@ -12,22 +12,22 @@ ContaminationFlow_doc/settings.log
 ContaminationFlow_doc/main-blx.bib
 Debug/*.o
 Debug/*.d
-Debug/molflowlinux_sub/GLApp/*.o
-Debug/molflowlinux_sub/GLApp/*.d
-Debug/molflowlinux_sub/Source_files_linux/*.o
-Debug/molflowlinux_sub/Source_files_linux/*.d
-Debug/molflowlinux_sub/Source_files_molflow/*.o
-Debug/molflowlinux_sub/Source_files_molflow/*.d
-Debug/molflowlinux_sub/Source_files_shared_sources/*.o
-Debug/molflowlinux_sub/Source_files_shared_sources/*.d
-Debug/molflowlinux_sub/TruncatedGaussian/*.o
-Debug/molflowlinux_sub/TruncatedGaussian/*.d
-Debug/molflowlinux_sub/TruncatedGaussian/*.o
-Debug/molflowlinux_sub/TruncatedGaussian/*.d
-Debug/molflowlinux_sub/boost/asio/impl/*.o
-Debug/molflowlinux_sub/boost/asio/impl/*.d
-Debug/molflowlinux_sub/boost/spirit/home/support/char_encoding/unicode/*.o
-Debug/molflowlinux_sub/boost/spirit/home/support/char_encoding/unicode/ *.d
-Debug/molflowlinux_sub/boost/spirit/home/support/char_encoding/unicode/*.o
-Debug/molflowlinux_sub/boost/spirit/home/support/char_encoding/unicode/*.d
-Debug/MolflowLinux
+Debug/ContaminationFlow_sub/GLApp/*.o
+Debug/ContaminationFlow_sub/GLApp/*.d
+Debug/ContaminationFlow_sub/Source_files_ContaminationFlow/*.o
+Debug/ContaminationFlow_sub/Source_files_ContaminationFlow/*.d
+Debug/ContaminationFlow_sub/Source_files_molflow/*.o
+Debug/ContaminationFlow_sub/Source_files_molflow/*.d
+Debug/ContaminationFlow_sub/Source_files_shared_sources/*.o
+Debug/ContaminationFlow_sub/Source_files_shared_sources/*.d
+Debug/ContaminationFlow_sub/TruncatedGaussian/*.o
+Debug/ContaminationFlow_sub/TruncatedGaussian/*.d
+Debug/ContaminationFlow_sub/TruncatedGaussian/*.o
+Debug/ContaminationFlow_sub/TruncatedGaussian/*.d
+Debug/ContaminationFlow_sub/boost/asio/impl/*.o
+Debug/ContaminationFlow_sub/boost/asio/impl/*.d
+Debug/ContaminationFlow_sub/boost/spirit/home/support/char_encoding/unicode/*.o
+Debug/ContaminationFlow_sub/boost/spirit/home/support/char_encoding/unicode/ *.d
+Debug/ContaminationFlow_sub/boost/spirit/home/support/char_encoding/unicode/*.o
+Debug/ContaminationFlow_sub/boost/spirit/home/support/char_encoding/unicode/*.d
+Debug/ContaminationFlow
